# ChangeLog for sys-fs/squash_dir
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  28 Apr 2010; Martin Väth <martin@mvath.de>
  +squash_dir-10.4.ebuild -squash_dir-10.3.ebuild:
  Version bump because of a stupid automake bug.

  27 Apr 2010; Martin Väth <martin@mvath.de>
  +squash_dir-10.3.ebuild -squash_dir-10.2.ebuild:
  Version bump. Support USE=readonly, making USE=+unionfs-fuse obsolete.
  Remove USE=hack-squash-utils and warn for previous installs.
  Recommend sys-fs/squashfs-tools[progress-redirect] from mv overlay.

  01 Apr 2010; Martin Väth <martin@mvath.de>
  Update tarball without revbump (remove ebuild from tarball).

  28 Mar 2010; Martin Väth <martin@mvath.de>
  squash_dir-10.2.ebuild:
  import with minor changes from a personal overlay.