@@ -1,4 +1,4 @@
-DIST squash_dir-10.4.tar.bz2 18647 RMD160 c2d2051e49e4f6994cba1f8a6bb73fbd6b20b5ef SHA1 365d61f1b8786ef1ea7ca1a429f3731e4ea93c6b SHA256 0b12934d618fa3b4d9852f8310ee0bc9273396396ec551b1f43bf68bc1a1841b
-EBUILD squash_dir-10.4.ebuild 1598 RMD160 fc43de52d97ff0414bc431a1b39c3da8a632464b SHA1 dce915e1841bfc9c01a2c242dc573f10c075435e SHA256 b453b0f3dc2c5fe06334cf14ab8b4fc737111b3cdf85e552c525c7a4814be772
-MISC ChangeLog 875 RMD160 514d270cd1ea8dc24b14a40bb30433225d1f5630 SHA1 875330fa75e7e8b0cf0cd10f24465339ff050469 SHA256 7bcd4eb5462e02185b1ea978d017c45698778364382406632ade6166dc42cf4f
+DIST squash_dir-10.5.tar.bz2 18968 RMD160 6723cf59bda831ce3c942a1586625b235c1002e1 SHA1 eaf6dbd49a73305c6900ce8c8cef832034019ff6 SHA256 bc240b798201e103096afd7f9c5d7776af849262acf6644ee3d68c8916041b4b
+EBUILD squash_dir-10.5.ebuild 1604 RMD160 fd248bbcf74216be3be02a78e9af45d0fb880aad SHA1 6f6e7981a581c3f169dd07077fbb887841a6730d SHA256 f5a92d372517e34309618e009eb9b19cd1cf756d244a4ecee87275effa41c648
+MISC ChangeLog 1036 RMD160 858d61e5c8903eea9fe51b62bd7f2c61ec865853 SHA1 0bd82d95b0773c9075ded400791af787b9557045 SHA256 1dbf2760f9234b2d3db3a8956a9a4f92a4100350f4272f2dd8ba9e32087ae1f4
 MISC metadata.xml 524 RMD160 695348b2ec91e6e657132f92d92355b3a9aa9cb3 SHA1 031aa7e4a43e9653e6ff5f5760f109cff893278c SHA256 9f7f3ee8acbeea6d82c33bfbab9ddf6076bac7f80f5789c95173223c2c658037
