@@ -1,0 +1,7 @@
+# ChangeLog for sys-fs/unionfs-fuse
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+  20 May 2010; Martin Väth <martin@mvath.de>
+  Copy from the portage tree and make live version (until 0.25 is in tree).
+  Clear previous ChangeLog.
